# shrivenQ

./: .gitignore  .pre-commit-config.yaml  AGENT_QUICK_REFERENCE.md  Cargo.toml  DASHBOARD.md  LICENSE  ONBOARDING.md  README.md  SPRINT_3.md  SPRINT_3_COMPLETE.md  TESTING.md  build.rs  clippy.toml  compliance.toml  compliance_remediator.txt  deny.toml  fix_magic_numbers.sh  notes.txt  run_live_analytics.sh  test_output.txt
auth/: Cargo.toml  README.md
auth/src/: binance.rs  lib.rs  zerodha.rs
bus/: Cargo.toml
bus/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: instrument.rs  lib.rs  market.rs  types.rs
feeds/: Cargo.toml
feeds/examples/: binance_testnet_v2.rs  test_lob_integration.rs  zerodha_live_test.rs
feeds/src/: lib.rs
feeds/src/binance/: config.rs  mod.rs  websocket.rs
feeds/src/common/: adapter.rs  event.rs  instrument_fetcher.rs  manager.rs  mod.rs
feeds/src/zerodha/: config.rs  market_data_pipeline.rs  mod.rs  websocket.rs
feeds/tests/: enhanced_integration_tests.rs  integration_tests.rs  unit_tests.rs
lob/: Cargo.toml
lob/benches/: apply_update.rs  v2_comparison.rs
lob/examples/: binance_live_features.rs  binance_testnet_v1.rs  features_demo.rs  nifty_tick_to_lob.rs  nse_snapshot_loader.rs
lob/src/: book.rs  features.rs  features_v2.rs  lib.rs  price_levels.rs  v2.rs
perf/: Cargo.toml
perf/src/: main.rs  wire.rs
services/auth/: Cargo.toml  README.md
services/auth/cache/zerodha/: zerodha_token_NQ8574.json
services/auth/examples/: binance_simple_usage.rs  binance_testnet_test.rs  grpc_client_test.rs  production_demo.rs  test_zerodha_grpc.rs  zerodha_auto_login_demo.rs  zerodha_simple_usage.rs
services/auth/reports/compliance/: compliance-report-96a093c-1755116079.json  compliance-report-96a093c-1755116079.txt  compliance-report-96a093c-1755116090.json  compliance-report-96a093c-1755116090.txt  compliance-report-96a093c-1755117685.json  compliance-report-96a093c-1755117685.txt  compliance-report-96a093c-1755118069.json  compliance-report-96a093c-1755118069.txt  compliance-report-96a093c-1755118364.json  compliance-report-96a093c-1755118364.txt  compliance-report-96a093c-1755118469.json  compliance-report-96a093c-1755118469.txt  compliance-report-96a093c-1755118995.json  compliance-report-96a093c-1755118995.txt  (+8 more)
services/auth/src/: binance_service.rs  grpc.rs  lib.rs  main.rs  zerodha_service.rs
services/auth/tests/: README.md  binance_integration_test.rs  mod.rs  test_runner.rs  zerodha_integration_test.rs
services/backtesting/: Cargo.toml  TEST_SUMMARY.md  build.rs  run_tests.sh
services/backtesting/examples/: simple_ma_strategy.rs
services/backtesting/src/: lib.rs  main.rs
services/backtesting/tests/: lib.rs  mod.rs
services/common/: Cargo.toml  build.rs
services/common/src/: config.rs  constants.rs  errors.rs  lib.rs
services/common/tests/: README.md  client_tests.rs  config_tests.rs  error_tests.rs  event_bus_tests.rs  integration_tests.rs  lib.rs  storage_tests.rs
services/data-aggregator/: Cargo.toml
services/data-aggregator/benches/: data_aggregator_benchmarks.rs
services/data-aggregator/examples/: client_usage.rs
services/data-aggregator/src/: config.rs  lib.rs  main.rs
services/data-aggregator/tests/: test_runner.rs
services/demo/: Cargo.toml  README.md
services/demo/src/: main.rs
services/discovery/: Cargo.toml
services/discovery/src/: lib.rs
services/execution-router/: Cargo.toml
services/execution-router/src/: algorithms.rs  config.rs  error.rs  grpc_impl.rs  lib.rs  main.rs  router.rs  smart_router.rs  venue_manager.rs
services/gateway/: Cargo.toml  README.md  build.rs
services/gateway/src/: config.rs  grpc_clients.rs  lib.rs  main.rs  metrics.rs  middleware.rs  models.rs  rate_limiter.rs  server.rs  utils.rs  websocket.rs
services/gateway/tests/: README.md  error_handling_tests.rs  integration_tests.rs  lib.rs  performance_tests.rs  stress_tests.rs
services/logging/: Cargo.toml  README.md  build.rs
services/logging/src/: lib.rs  main.rs
services/market-connector/: Cargo.toml  README.md  TESTING.md
services/market-connector/src/: grpc_service.rs  lib.rs  main.rs
services/ml-inference/: Cargo.toml  README.md  build.rs
services/ml-inference/src/: lib.rs  main.rs
services/monitoring/: Cargo.toml
services/monitoring/src/: dashboard.html  dashboard.rs  main.rs
services/oms/: Cargo.toml  TEST_SUMMARY.md
services/oms/src/: audit.rs  error.rs  lib.rs  lifecycle.rs  matching.rs  order.rs  persistence.rs  recovery.rs
services/oms/tests/: lib.rs
services/options-engine/: Cargo.toml  README.md  build.rs
services/options-engine/src/: grpc_service.rs  grpc_service.rs.bak  lib.rs  main.rs  zerodha.rs
services/options-engine/tests/: test_config.rs
services/orderbook/: Cargo.toml
services/orderbook/examples/: demo.rs  live_analytics.rs
services/orderbook/src/: analytics.rs  core.rs  events.rs  lib.rs  main.rs  metrics.rs  replay.rs
services/orderbook/tests/: lib.rs
services/portfolio-manager/: Cargo.toml
services/portfolio-manager/src/: lib.rs  market_feed.rs  optimization.rs  portfolio.rs  position.rs  rebalancer.rs
services/portfolio-manager/tests/: README.md  debug_test.rs  position_integration.rs  working_integration_test.rs
services/reporting/: Cargo.toml
services/reporting/src/: analytics.rs  lib.rs  metrics.rs  performance.rs
services/reporting/tests/: integration_test.rs
services/risk-manager/: Cargo.toml
services/risk-manager/src/: circuit_breaker.rs  config.rs  grpc_impl.rs  grpc_service.rs  lib.rs  limits.rs  main.rs  monitor.rs
services/risk-manager/tests/: lib.rs
services/secrets-manager/: Cargo.toml  README.md
services/secrets-manager/src/: grpc_service.rs  lib.rs  main.rs  server.rs
services/sentiment-analyzer/: Cargo.toml  README.md  build.rs
services/sentiment-analyzer/src/: lib.rs  main.rs
sim/: Cargo.toml
sim/src/: replay.rs
storage/: Cargo.toml
storage/benches/: wal_benchmark.rs
storage/src/: events.rs  segment.rs  wal.rs
storage/tests/: deterministic_replay.rs
(+818 files in other folders)
