[workspace]
members = [
    "common",
    "bus",
    "cli",
    "storage",
    "sim",
    "perf",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Praveen Ayyasola <praveenkumar.avln@gmail.com>"]
repository = "https://github.com/praveen686/shrivenQ"
license = "Proprietary"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
crc32fast = "1.4"
memmap2 = "0.9"
byteorder = "1.5"
criterion = "0.5"