[workspace]
members = [
    # Core functionality
    "crates/core/common",

    # Market data handling
    "crates/market-data/lob",
    "crates/market-data/feeds",

    # Trading systems
    "crates/trading/engine",
    "crates/trading/sim",

    # Infrastructure
    "crates/infra/auth",
    "crates/infra/bus",
    "crates/infra/storage",

    # Tools and utilities
    "crates/tools/cli",
    "crates/tools/perf",
]
resolver = "2"
exclude = ["scripts/compliance/sq-compliance", "scripts/compliance/sq-remediator"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Praveen Ayyasola <praveenkumar.avln@gmail.com>"]
repository = "https://github.com/praveen686/shrivenQ"
license = "Proprietary"

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
crc32fast = "1.4"
memmap2 = "0.9"
byteorder = "1.5"
criterion = "0.5"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"
tempfile = { version = "3.20", default-features = false }
base64 = "0.22"
regex = "1.11"
getrandom = "0.2"
regex-automata = "0.4"
regex-syntax = "0.8"
hdrhistogram = { version = "7", default-features = false }
proptest = "1.7"
tokio-test = "0.4"
rstest = "0.18"

# Pin versions to avoid duplicates
rand_core = "0.6"
windows-sys = "0.52"
windows-targets = "0.52"
wasi = "0.11"
