[workspace]
members = [
    # Microservices
    "services/common",
    "services/discovery",
    "services/auth",
    "services/gateway",
    "services/market-connector",
    "services/data-aggregator", 
    "services/risk-manager",
    "services/execution-router",
    "services/portfolio-manager",
    "services/reporting",
    "services/demo",
    "services/orderbook",
    "services/trading-gateway",
    "services/oms",
    "services/options-engine",
    "services/monitoring",
    "services/secrets-manager",
    "services/ml-inference",
    "services/sentiment-analyzer",
    "services/logging",
    "services/backtesting",
    # Testing infrastructure
    "tests/test-utils",
]
resolver = "2"
exclude = [
    "tools/sq-compliance-tools/sq-compliance",
    "tools/sq-compliance-tools/sq-remediator",
]


[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Praveen Ayyasola <praveenkumar.avln@gmail.com>"]
repository = "https://github.com/praveen686/shrivenQ"
license = "Proprietary"

[workspace.dependencies]
rustc-hash = "2.0"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"

# Testing dependencies (updated versions to match existing)
rstest_reuse = "0.7"
fake = "2.10"
mockall = "0.13"
wiremock = "0.6"
test-case = "3.1"
pretty_assertions = "1.4"
insta = "1.41"
arbitrary = { version = "1.4", features = ["derive"] }
quickcheck = "1.0"
quickcheck_macros = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
crc32fast = "1.4"
memmap2 = "0.9"
byteorder = "1.5"
criterion = "0.5"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
rand_distr = "0.4"
tempfile = { version = "3.20", default-features = false }
base64 = "0.22"
regex = "1.11"
getrandom = "0.2"
regex-automata = "0.4"
regex-syntax = "0.8"
hdrhistogram = { version = "7", default-features = false }
proptest = "1.7"
tokio-test = "0.4"
rstest = "0.18"

# Pin versions to avoid duplicates
rand_core = "0.6"
windows-sys = "0.52"
windows-targets = "0.52"
wasi = "0.11"
