[package]
name = "auth"
version = "0.1.0"
edition = "2024"
authors = ["Praveen Ayyasola <praveenkumar.avln@gmail.com>"]
license = "Proprietary"
repository = "https://github.com/praveen686/shrivenQ"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
totp-rs = "5.4"
base32 = "0.5"
reqwest = { version = "0.12", features = ["json", "cookies"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"
tracing-subscriber = "0.3"

# Optional for enhanced security
keyring = { version = "3", optional = true }
age = { version = "0.10", optional = true }

[features]
default = []
secure-storage = ["keyring", "age"]

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "test_zerodha"
path = "src/bin/test_zerodha.rs"

[[bin]]
name = "test_binance"
path = "src/bin/test_binance.rs"