[package]
name = "bus"
version.workspace = true
edition = "2024"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
crossbeam = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]