[package]
name = "cli"
version.workspace = true
edition = "2024"
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "shrivenq"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
bus = { path = "../bus" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]