[package]
name = "feeds"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
auth = { path = "../auth" }
bus = { path = "../bus" }
lob = { path = "../lob" }
storage = { path = "../storage" }

tokio = { workspace = true }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
url = "2.5"
chrono = "0.4"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
rand_distr = "0.4"
csv = "1.3"
clap = { workspace = true }
dotenv = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { workspace = true }
tokio-test = "0.4"

[[example]]
name = "zerodha_live_test"
path = "examples/zerodha_live_test.rs"

[[bin]]
name = "instrument-service"
path = "src/bin/instrument_service.rs"

[[bin]]
name = "market-data-service"
path = "src/bin/market_data_service.rs"

[[bin]]
name = "wal-inspector"
path = "src/bin/wal_inspector.rs"

