[package]
name = "lob"
version = "0.1.0"
edition = "2024"
authors = ["Praveen Ayyasola <praveenkumar.avln@gmail.com>"]
license = "Proprietary"
repository = "https://github.com/praveen686/shrivenQ"

[dependencies]
common = { path = "../common" }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls", "connect"] }
futures-util = "0.3"
serde_json = "1.0"
tracing-subscriber = "0.3"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "apply_update"
harness = false

[[bench]]
name = "v2_comparison"
harness = false