[package]
name = "perf"
version = "0.1.0"
edition = "2024"
authors = ["Praveen Ayyasola <praveenkumar.avln@gmail.com>"]
license = "Proprietary"
repository = "https://github.com/praveen686/shrivenQ"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hdrhistogram = "7"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.42", features = ["full"] }
storage = { path = "../storage" }
common = { path = "../common" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "sq-perf"
path = "src/main.rs"