[package]
name = "auth-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "auth-service"
path = "src/main.rs"

[[bin]]
name = "zerodha"
path = "src/bin/zerodha.rs"

[[bin]]
name = "binance"
path = "src/bin/binance.rs"

[dependencies]
# Core dependencies
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

# gRPC
tonic = { workspace = true }
prost = { workspace = true }


# Auth specific
jsonwebtoken = "9.3"
argon2 = "0.5"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1.11", features = ["v4"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Crypto
hmac = "0.12"
sha2 = "0.10"
base64 = { workspace = true }

# Additional dependencies for providers
reqwest = { version = "0.12", features = ["json", "cookies"] }
rustc-hash = "2.1"
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
services-common = { path = "../common" }
secrets-manager = { path = "../secrets-manager" }
totp-rs = "5.5"
hex = "0.4"
dotenv = "0.15"
async-trait = "0.1"
