[package]
name = "services-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = "0.13"
# Removed circular dependencies - services should depend on common, not vice versa

# Async
tokio = { workspace = true }
async-trait = "0.1"
futures = "0.3"

# Utils
uuid = { version = "1.10", features = ["v4"] }
rustc-hash = "2.1"
parking_lot = "0.12"
crossbeam = "0.8"
chrono = { workspace = true }

# Crypto for authentication
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { workspace = true }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3.10"