[package]
name = "data-aggregator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"

# Internal dependencies
common = { path = "../../crates/core/common" }
market-connector = { path = "../market-connector" }

# Data processing
chrono = { workspace = true }
rustc-hash = "2.1"

# Storage
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
clickhouse = "0.13"

# WAL dependencies
bincode = { workspace = true }
byteorder = "1.5"
crc32fast = "1.4"

# Metrics
prometheus = "0.13"

[dev-dependencies]
tempfile = "3.10"
services-common = { path = "../common" }
tracing-subscriber = "0.3"