[package]
name = "data-aggregator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "data-aggregator"
path = "src/main.rs"


[dependencies]
# Core dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"

# Internal dependencies
services-common = { path = "../common" }
market-connector = { path = "../market-connector" }


# Data processing
chrono = { workspace = true }
rustc-hash = "2.1"

# Storage
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
clickhouse = "0.13"

# WAL dependencies
bincode = { workspace = true }
byteorder = "1.5"
crc32fast = "1.4"

# Metrics
prometheus = "0.13"

# CLI parsing
clap = { version = "4.0", features = ["derive"] }

# gRPC dependencies
tonic = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
tracing-subscriber = "0.3"
rstest = "0.21"
tokio-test = "0.4"
test-utils = { path = "../../tests/test-utils" }
criterion = { version = "0.5", features = ["html_reports"] }
fastrand = "2.0"

[[bench]]
name = "data_aggregator_benchmarks"
harness = false