[package]
name = "execution-router"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"

# Internal dependencies
services-common = { path = "../common" }
risk-manager = { path = "../risk-manager" }
market-connector = { path = "../market-connector" }

# Performance
rustc-hash = "2.1"
dashmap = "6.1"
parking_lot = "0.12"
rand = "0.8"

# Messaging
crossbeam-channel = "0.5"

# Metrics
prometheus = "0.13"

# Time handling
chrono = { workspace = true }

# gRPC dependencies
tonic = { workspace = true }

tokio-stream = "0.1"
async-stream = "0.3"

# WebSocket for real market data
tokio-tungstenite = "0.20"
futures-util = "0.3"

# Error handling
thiserror = { workspace = true }