[package]
name = "logging"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "ansi"] }
tracing-appender = "0.2"

# OpenTelemetry (using latest compatible versions)
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.28"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Internal
services-common = { path = "../common" }

# Data structures
dashmap = "6.1"
parking_lot = "0.12"

# Compression
flate2 = "1.0"

[build-dependencies]
tonic-build = "0.12"