[package]
name = "market-connector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.4", features = ["v4"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Common types from core
common = { path = "../../crates/core/common" }
auth = { path = "../../crates/infra/auth" }
storage = { path = "../../crates/infra/storage" }
lob = { path = "../../crates/market-data/lob" }
shrivenquant-proto = { path = "../../crates/core/proto" }

# gRPC dependencies
tonic = { workspace = true }
prost = { workspace = true }
rustc-hash = "2.1"
chrono = { workspace = true }
bincode = { workspace = true }
futures = "0.3"
dotenv = "0.15"
url = "2.4"
async-trait = "0.1"
urlencoding = "2.1"
csv = "1.3"
colored = "2.0"

[[bin]]
name = "test_exchange_connectivity"
path = "src/bin/test_exchange_connectivity.rs"

[[bin]]
name = "test_complete_system"
path = "src/bin/test_complete_system.rs"

[[bin]]
name = "live_market_data"
path = "src/bin/live_market_data.rs"
