[package]
name = "monitoring"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
services-common = { path = "../common" }

# Metrics
prometheus = "0.13"

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Random for demo metrics
rand = "0.8"