[package]
name = "oms"
version = "0.1.0"
edition = "2024"
authors = ["ShrivenQuant Team"]
description = "World-class Order Management System with institutional-grade features"

[dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Performance
fxhash = "0.2"
parking_lot = "0.12"
crossbeam = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Internal
services-common = { path = "../common" }


[dev-dependencies]
criterion = "0.5"
tempfile = "3.20"
rstest = "0.21"
proptest = "1.0"
mockall = "0.13"
tokio-test = "0.4"
testcontainers = "0.15"
