[package]
name = "options-engine"
version = "0.1.0"
edition = "2024"
authors = ["ShrivenQuant Team"]
description = "Mathematical Options Trading System for Indian Markets"

[dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }
tokio-tungstenite = "0.21"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# HTTP client for Zerodha API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Mathematical libraries
libm = "0.2"
rand = "0.8"
rand_distr = "0.4"
statrs = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenv = "0.15"
config = "0.14"

# Data structures
dashmap = "6.1"

# Performance
parking_lot = "0.12"

# Internal dependencies
services-common = { path = "../common" }

# gRPC dependencies
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"
