[package]
name = "options-engine"
version = "0.1.0"
edition = "2024"
authors = ["ShrivenQuant Team"]
description = "Mathematical Options Trading System for Indian Markets"

[dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }
tokio-tungstenite = "0.21"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# HTTP client for Zerodha API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Mathematical libraries
libm = "0.2"
rand = "0.8"
rand_distr = "0.4"
statrs = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenv = "0.15"
config = "0.14"

# Data structures
dashmap = "6.1"

# Performance
parking_lot = "0.12"
rustc-hash = "2.0"

# Internal dependencies
services-common = { path = "../common" }

# gRPC dependencies
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }
tokio-stream = "0.1"

[dev-dependencies]
# Testing framework
rstest = "0.18"
tokio-test = "0.4"

# Test assertions
approx = "0.5"
assert_matches = "1.5"

# Property-based testing
proptest = "1.0"
quickcheck = "1.0"

# Mocking and test doubles
mockall = "0.11"
wiremock = "0.5"

# Test utilities
tempfile = "3.0"
test-log = "0.2"

# Performance testing
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
tonic-prost-build = "0.14"

[[bin]]
name = "options-engine"
path = "src/main.rs"


[features]
default = []
# Feature for enabling expensive tests
expensive-tests = []
# Feature for enabling benchmarks with large datasets
large-benchmarks = []

[lib]
name = "options_engine"
path = "src/lib.rs"

