[package]
name = "orderbook"
version = "0.1.0"
edition = "2024"
authors = ["ShrivenQuant Team"]

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Performance
crossbeam = "0.8"
parking_lot = "0.12"
smallvec = "1.13"
arrayvec = "0.7"
ahash = "0.8"

# SIMD operations using stable Rust intrinsics
wide = { version = "0.7", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rkyv = { version = "0.7", features = ["validation"] }

# Checksums
crc32fast = "1.3"


# Metrics
metrics = "0.23"
hdrhistogram = "7.5"

# Internal
services-common = { path = "../common" }


# For live analytics example
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
colored = "2.0"
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
quickcheck = "1.0"
rand = "0.8"

# Benchmarks will be added later
# [[bench]]
# name = "orderbook_bench"
# harness = false

[features]
default = ["simd"]
simd = ["wide"]
replay = []
analytics = []