[package]
name = "reporting"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core dependencies
common = { path = "../../crates/core/common" }
services-common = { path = "../common" }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Concurrency
parking_lot = "0.12"
crossbeam = "0.8"
dashmap = "6.0"

# Performance
rustc-hash = "2.0"

# Metrics and monitoring
prometheus = { version = "0.13", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"

# gRPC (for future API)
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }

# SIMD support
wide = "0.7"

[features]
default = ["simd"]
simd = []
prometheus = ["dep:prometheus"]
grpc = ["dep:tonic", "dep:prost"]

[build-dependencies]
tonic-build = { version = "0.12", optional = true }

[dev-dependencies]
criterion = "0.5"