[package]
name = "risk-manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"

# gRPC dependencies
tonic = { workspace = true }
tonic-health = "0.12"
tonic-reflection = "0.12"
prost = { workspace = true }
# HTTP server for metrics
warp = "0.3"

# Internal dependencies
services-common = { path = "../common" }

# Concurrent data structures
dashmap = "6.1"
parking_lot = "0.12"
rustc-hash = "2.1"

# Metrics and monitoring
prometheus = "0.13"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }

# Configuration
config = "0.14"

# Time handling
chrono = { workspace = true }

[[bin]]
name = "risk-manager"
path = "src/main.rs"