[package]
name = "secrets-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }

# Encryption
aes-gcm = { version = "0.10", features = ["aes"] }
argon2 = { version = "0.5", features = ["std"] }
ring = "0.17"
base64 = "0.22"
rand = "0.8"

# Key management
keyring = "3.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal
services-common = { path = "../common" }