[package]
name = "sentiment-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# HTTP client for Reddit API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Internal
services-common = { path = "../common" }

# Data structures
dashmap = "6.1"

# Sentiment analysis
sentiment = "0.1"

[build-dependencies]
tonic-build = "0.12"